deployment/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
      - name: minio-storage
        emptyDir: {}
      containers:
      - name: minio
        image: zagaos/minio:2.0
        args:
        - server
        - /data
        - '--console-address=:9001'
        volumeMounts:
        - name: minio-storage
          mountPath: /data
        ports:
        - containerPort: 9000
          protocol: TCP
        - containerPort: 9001
          protocol: TCP

      - name: configure-mc
        image: zagaos/minio:2.0
        command:
        - /bin/sh
        - -c
        - |
          until curl -s http://localhost:9000/minio/health/live; do
            echo "Waiting for MinIO..."
            sleep 2
          done
          mc alias set minio http://localhost:9000 minioAdmin minio1234
          mc mb --ignore-existing minio/warehouse
          tail -f /dev/null
      # initContainers:
      # - name: configure-mc
      #   image: zagaos/minio:2.0
      #   command:
      #   - /bin/sh
      #   - -c
      #   - |
      #     sleep 10 && 
      #     mc alias set minio http://minio:9000 minioAdmin minio1234 && 
      #     mc mb minio/warehouse || echo 'source Bucket already exists';

      #   env:
      #   - name: MINIO_ROOT_USER
      #     value: "minioAdmin"
      #   - name: MINIO_ROOT_PASSWORD
      #     value: "minio1234"
