deployment/minio/route-console.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-console
spec:
  to:
    kind: Service
    name: minio-service
  port:
    targetPort: web
  tls:
    termination: edge
